Fix overlap on splits

--- a/stylesheets/tabs.less
+++ b/stylesheets/tabs.less
@@ -47,6 +47,9 @@
     &:first-child {
       margin-left: 8px;
     }
+    &:last-child {
+      margin-right: 8px;
+    }
 
     .close-icon {
       z-index: 20;
